Fix: UI: Scenes' Navigation Buttons

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
             box-shadow: none;
             padding: 4px 0px !important;
             margin: 0 -10px;
-            opacity: 0.7;
+            opacity: 0.4;
             z-index: 99;
             pointer-events: painted;
+            border-radius: 1px;
+        }
+        #navBar button:hover {
+            opacity: 0.6;
         }
 
         /* #sceneIndicator {
@@ -132,7 +136,8 @@
 
         .scene h3 {
             padding-left: 38px;
-            padding-top: 6px;
+            padding-top: 3px;
+            padding-bottom: 3px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
