Fix: Scenes' touch gestures' navigation logic

--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
     </label>
 
     <nav id="navBar">
-        <button id="prevScene" onclick="navigateScenes(-1)">⬅️</button>
+        <button id="prevScene" onclick="navigateScenes(1)">⬅️</button>
         <!-- <span id="sceneIndicator">Scene 1</span> -->
-        <button id="nextScene" onclick="navigateScenes(1)">➡️</button>
+        <button id="nextScene" onclick="navigateScenes(+1)">➡️</button>
     </nav>
 
     <h2 id="title">Title</h2>
