Fix: Scenes' touch gestures' nav

--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
             const touchEndY = e.changedTouches[0].clientY;
             const deltaX = touchEndX - touchStartX;
             const deltaY = touchEndY - touchStartY;
+            if (Math.abs(deltaX) > 28)
             if (Math.abs(deltaX) > Math.abs(deltaY)) {
                 // Horizontal swipe
                 if (deltaX > 0) {
