--- a/index.html
+++ b/index.html
@@ -543,7 +543,25 @@
         }
 
         function readCharacterLines(characterIndex) {
-            speechSynthesis.cancel();
+            function selectText(nodes) {
+                const selection = window.getSelection();
+                selection.removeAllRanges();
+                // const nodes = document.querySelectorAll(nodeClass);
+
+                nodes.forEach(node => {
+                    if (document.body.createTextRange) {
+                        const range = document.body.createTextRange();
+                        range.moveToElementText(node);
+                        range.select();
+                    } else if (window.getSelection) {
+                        const range = document.createRange();
+                        range.selectNodeContents(node);
+                        selection.addRange(range);
+                    } else {
+                        console.warn("Could not select text in node: Unsupported browser.");
+                    }
+                })
+            }
             function voiceLoaded() {
                 return speechSynthesis.getVoices().length;
             }
@@ -558,9 +576,13 @@
                 // utterance.pitch = 1;
                 speechSynthesis.speak(utterance);
             }
+            speechSynthesis.cancel();
             const character = script.CHARACTERS[characterIndex];
-            const characterLines = document.querySelectorAll(`.${character}`);
-            const characterLinesText = Array.from(characterLines).map(line => line.parentElement.lastElementChild.innerText).join('.\n');
+            const characterLines = document.querySelectorAll(`.${character} + span`);
+            // const characterLines = Array.from(characterNameInLines).map(line => line.parentElement.lastElementChild.innerText);
+            selectText(characterLines);
+
+            const characterLinesText = Array.from(characterLines).map(line => line.innerText).join('.\n');
             if (voiceLoaded()) {
                 speak(characterLinesText);
             } else {
